--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,11 +56,14 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AppManager.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\GameMode.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\InputManager.cs" />
-    <Compile Include="Assets\Scripts\Menu\GameModeButton.cs" />
     <Compile Include="Assets\Scripts\Gameplay\GamePiece.cs" />
+    <Compile Include="Assets\Scripts\InputManager.cs" />
+    <Compile Include="Assets\Scripts\UI\StretchSprite.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\TouchController.cs" />
+    <Compile Include="Assets\Scripts\Menu\GameModeButton.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\GamePiecesController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Audio\Music\Attribution.txt" />
