Small Gameplay UI setup;

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,12 +61,13 @@
     <Compile Include="Assets\Scripts\ScriptableObjects\GameMode.cs" />
     <Compile Include="Assets\Scripts\Gameplay\GamePiece.cs" />
     <Compile Include="Assets\Scripts\Gameplay\GamePiecesController.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\BoardSlot.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
     <Compile Include="Assets\Scripts\UI\StretchSprite.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\GamePieceType.cs" />
     <Compile Include="Assets\Scripts\Gameplay\TouchController.cs" />
     <Compile Include="Assets\Scripts\Menu\GameModeButton.cs" />
-    <Compile Include="Assets\Scripts\Gameplay\BoardSlot.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\RoundManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Audio\Music\Attribution.txt" />
